# QLedIndicator-CustomPlugin-withCMake-Example

./: .gitignore  README.md
ExampleApp/LedIndicatorDeneme/: CMakeLists.txt
ExampleApp/LedIndicatorDeneme/src/: mainwindow.cpp  mainwindow.ui
Plugin/QLedIndicator/: CMakeLists.txt
Plugin/QLedIndicator/plugin/: QLedIndicatorAPI.h  QLedIndicatorDesignerPlugin.cpp  QLedIndicatorDesignerPlugin.h
Plugin/QLedIndicator/resources/: QLedIndicator.xml  icons.qrc
Plugin/QLedIndicator/src/: QLedIndicator.cpp  QLedIndicator.h  QLedIndicator.ui
